fixed image of NCBOR to alignment

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -64,6 +64,9 @@ h1 {
   margin: .67em 0;
   font-size: 2em;
 }
+.ncbor{
+  width:90%;
+}
 mark {
   color: #000;
   background: #ff0;
